remove 210/211 - move projects